feat: :zap: funcionalidad navbar

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <header>
       <a href="#" class="logo">Foods</a>
-      <div class="bx bx-menu" id="memu-icon"></div>
+      <div class="bx bx-menu" id="menu-icon"></div>
       <ul class="navbar">
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
@@ -186,12 +186,13 @@
                         <a href="#"><i class="bx bxl-youtube"></i></a>
                         <a href="#"><i class="bx bxl-linkedin"></i></a>
                         <a href="#"><i class="bx bxl-whatsapp"></i></a>
+                        <a href="#"><i class="bx bxl-pinterest"></i></a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <script src="./js/main.js"></script>
+    <script src="./js/main.js" defer></script>
   </body>
 </html>
